스토브리그 수정

--- a/_config.yml
+++ b/_config.yml
@@ -19,9 +19,10 @@ permalink:          /:title
 paginate:           5
 paginate_path:      "/posts/page:num/"
 plugins:
-  # 블로그 disqus shortname
-disqus: https://marketerview.disqus.com/
-  shortname: marketerview
+
+# 블로그 disqus shortname
+disqus:
+shortname: marketerview
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap
