이태원 클라쓰 수정

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ plugins:
 
 # 블로그 disqus shortname
 disqus:
-shortname: marketerview
+shortname: marketerview-2
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap
